--- a/plus.html
+++ b/plus.html
@@ -34,11 +34,14 @@
 
       <div class="description">
         <h2>Les derniers matchs: </h2>
-          <a class="bouton" href="https://www.google.fr/search?q=resultat+foot+coupe+du+monde&rlz=1C1CHBF_frFR753FR753&oq=resultat+foot&aqs=chrome.1.69i57j0l5.15930j1j7&sourceid=chrome&ie=UTF-8#sie=lg;/m/06qjc4;2;/m/030q7;mt;fp;1">"résultat" 
+          <a class="bouton" href="https://www.google.fr/search?q=resultat+foot+coupe+du+monde&rlz=1C1CHBF_frFR753FR753&oq=resultat+foot&aqs=chrome.1.69i57j0l5.15930j1j7&sourceid=chrome&ie=UTF-8#sie=lg;/m/06qjc4;2;/m/030q7;mt;fp;1"rel="stylesheet">Résultat
+          </a>
+          <a class="bouton" href="https://www.tf1.fr/tf1/fifa-coupe-du-monde-de-football/videos/top-5-buts-de-l-equipe-de-france.html"rel="stylesheet">But
+          </a>
+          <a class="bouton" href="https://www.pointdevente.parionssport.fdj.fr/"rel="stylesheet">Parier ICI
           </a>
       </div>
     </section>
-
 
     <!-- Ceci est un commentaire
 4/ Bande image
@@ -47,13 +50,9 @@
         <img class="bleu" src="https://www.francetvinfo.fr/image/759p4v79a-65f9/1200/450/8883257.jpg">
       <article>
         <header>
-          <h4>Supporter son equipe </h4>
+          <h4>Le plus important c'est de rester soudé derrière son pays !!! </h4>
         </header>
       </article>
-      <article>
-        <header>
-          <h4>Toujours etre là même dans les moments difficiles </h4>
-        </header
     </section>
   </body>
 </html>
