--- a/france18.html
+++ b/france18.html
@@ -13,7 +13,7 @@
 1/ LE HAUT DE VOTRE SITE INTERNET
 -->
     <header>
-      <a href="accueil.html" class="bouton">Accueil</a>
+      <a href="index.html" class="bouton">Accueil</a>
       <a href="france98.html" class="bouton">France 1998</a>
       <a href="france18.html" class="bouton">France 2018</a>
       <a href="plus.html" class="bouton">Plus</a>
