--- a/plus.html
+++ b/plus.html
@@ -10,7 +10,7 @@
   <body>
 
     <!-- Ceci est un commentaire
-1/ LE HAUT DE VOTRE SITE INTERNET
+1/ LE HAUT DU SITE INTERNET
 -->
     <header>
       <a href="index.html" class="bouton">Accueil</a>
@@ -20,14 +20,14 @@
     </header>
 
     <!-- Ceci est un commentaire
-2/ LA PARTIE AVEC L'IMAGE + LA CITATION
+2/ LA PARTIE AVEC L'IMAGE + PHRASE
 -->
     <section class="plus">
     </section>
 
 
     <!-- Ceci est un commentaire
-3/ LA PARTIE sur les équipes
+3/ LA PARTIE SUR LES EQUIPES
 -->
     <section class="recette">
       <img src="" />
@@ -45,7 +45,7 @@
     </section>
 
     <!-- Ceci est un commentaire
-4/ Bande image
+4/ BANDE IMAGE
 -->
     <section class="plats">
       <article>
