--- a/france18.html
+++ b/france18.html
@@ -33,11 +33,12 @@
       <img src="" />
 
       <div class="description">
-        <h2>L'équipes : </h2>
+        <h2>L'équipes de 2018 : </h2>
         <ul>
         <li>Un nouveau système de jeux mit en place par un des champions du monde (Didier Deschamps)</li>
         <li>l'équipe la plus jeune alignées depuis 1930 dans cette compétion </li>
         <li>Une envie sans fin pour leur couleur et leur pays </li>
+        <iframe width="400" height="315" src="https://www.youtube.com/embed/p6E9R9qv1No" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </ul>
       </div>
     </section>
