--- a/france98.html
+++ b/france98.html
@@ -39,6 +39,7 @@
           <li>La composition</li>
           <li>Un séléctionneur incroyable </li>
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/FRA-ITA_2000-07-02.svg/280px-FRA-ITA_2000-07-02.svg.png" alt="">
+          <iframe width="400" height="315" src="https://www.youtube.com/embed/gYkACVDFmeg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </ul>
       </div>
     </section>
