--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans" rel="stylesheet">
+
+      <!-- Ceci est un commentaire
+      lien vers fichier css
+-->      
     <link href="style.css" rel="stylesheet">
   </head>
 
